# zephyr-embedded-labs

./: .gitignore  CMakeLists.txt  Kconfig  README.md  app.overlay  prj.conf  prj_atsamv71.conf  prj_stm32mp257_m33.conf
apps/bluetooth_rx/: bluetooth_rx.c  bluetooth_rx.h
apps/net/: common.h  echo-server.c  echo_server.h  net_sample_common.h  tcp.c  udp.c
apps/stm32mp257_m33/ipc/: ipc.c  ipc.h
apps/stm32mp257_m33/rpmsg/: rpmsg_processor.c  rpmsg_processor.h
apps/stm32mp257_m33_ipc/: ipc.c
apps/vehicle_command_parser/: vehicle_command_parser.c  vehicle_command_parser.h  vehicle_ipc_msg_processor.c  vehicle_ipc_msg_processor.h
apps/vehicle_control_manager/: vehicle_control_manager.c  vehicle_control_manager.h
boards/sam_v71_xult/: sam_v71.overlay
boards/stm32mp257/: stm32mp257.overlay
debug/: ozone.debug
drivers/motor_driver/: motor_driver.c  motor_driver.h
include/: vehicle_command.h  vehicle_ipc_wire.h
src/: atsamv71_main.c  main.c  stm32mp257_m33_main.c
